<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".TelephonyManagerActivity" >

        <TableRow>

            <TextView
                android:id="@+id/cellIDLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/cellID"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/cellID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/lacLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/lac"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/lac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/mccLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/mcc"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/mcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/mncLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/mnc"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/mnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/longitudeLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/latitudeLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />
        </TableRow>
    </TableLayout>

</LinearLayout>